# calory-counter

./: CMakeLists.txt  README.md  doxy.gen
client/: diet-client.c
lib/: food.c  food.h  foodlist.c  foodlist.h  foodlistnode.c  foodlistnode.h  sock.c  sock.h
report/: report.tex
server/: diet-server.c  sockethandler.c  sockethandler.h
